pluralize survey
